--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1313,7 +1313,10 @@
       </p>
     
       <div class="icon-div" >
-        <img src="static/img/free-icon-facebook-733603.png" alt="" />
+        <a href="https://vk.com/club229023036">
+        <img src="static/img/free-icon-vk-3670029.png" alt="" />
+        </a>
+        
         <a
           href="https://www.instagram.com/level_tour.kg?igsh=MXAwdjZqbDJkd2t5eA=="
           ><img src="static/img/free-icon-video-15678556.png" alt=""
